# eqtui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  cli.rs  client.rs  config.rs  daemon.rs  event.rs  lib.rs  main.rs  pipeline.rs  profiles.rs  protocol.rs  pw.rs  pw_filter_ffi.rs  state.rs  tui.rs
src/autoeq/: mod.rs  parser.rs
src/effects/: equalizer.rs  mod.rs
src/handler/: command.rs  insert.rs  mod.rs  normal.rs  visual.rs
src/pw/: filter.rs  links.rs  mod.rs  null_sink.rs  props.rs  run.rs
src/tui/: devices.rs  eq_table.rs  graph.rs  mod.rs  status.rs
