[package]
name = "eqtui"
version = "0.1.0"
description = "Terminal-native audio effects processor for PipeWire"
authors = ["SiputBiru <hillsforrest03@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29", default-features = false, features = [
  "event-stream",
] }
dasp = { version = "0.11", features = ["dasp_signal", "dasp_envelope"] }
dirs = "6"
libspa-sys = "0.10.0"
pipewire = "0.10.0"
pipewire-sys = "0.10.0"
ratatui = { version = "0.30", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
tui-input = "0.15.3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
uninlined_format_args.level = "allow"
trivially_copy_pass_by_ref.level = "deny"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
must_use_candidate = "allow"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
