[package]
name = "eqtui"
version = "0.1.1-alpha.6"
description = "Terminal-native(TUI) audio effects processor for PipeWire"
authors = ["SiputBiru <radityamahatma23@gmail.com>"]
license = "GPL-2.0-only"
repository = "https://github.com/SiputBiru/eqtui"
readme = "README.md"
keywords = ["pipewire", "equalizer", "tui", "audio", "dsp"]
categories = ["multimedia::audio", "command-line-utilities"]
exclude = [
  "imgs/",
  ".cache",
  "examples/",
  ".tmp/",
  ".github/",
  ".docs/",
  "target/",
]
rust-version = "1.89.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29", default-features = false, features = [
  "event-stream",
] }
dirs = "6"
libc = "0.2.186"
libspa-sys = "0.10.0"
pipewire = "0.10.0"
pipewire-sys = "0.10.0"
ratatui = { version = "0.30", features = ["serde", "crossterm_0_29"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.23"
tui-input = "0.15.3"
uds = "0.4.2"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
uninlined_format_args.level = "allow"
trivially_copy_pass_by_ref.level = "deny"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
must_use_candidate = "allow"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
